# UA-Extract

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-rust.txt  setup.py
.github/workflows/: pypi-publish.yml  update-regexes.yml
device_detector/: device_detector.py  utils.py  yaml_loader.py
device_detector/parser/client/: dictua.py
device_detector/regexes/upstream/device/: mobiles.yml
device_detector/tests/: base.py
ua_extract/: __init__.py  __main__.py  cli.py  configure_regex_interpolators.sh  device_detector.py  source.py  update_regex.py  yaml_loader.py
ua_extract/appdetails/: mobile_app.yml
ua_extract/parser/: client_hints.py  extractors.py
ua_extract/parser/client/: browser.py  dictua.py  mobileapp.py
ua_extract/parser/device/: base.py  bot.py  device.py  television.py
ua_extract/regexes/upstream/: bots.yml  oss.yml
ua_extract/regexes/upstream.backup/: bots.yml  oss.yml
ua_extract/regexes/upstream.backup/client/: browsers.yml  mobile_apps.yml
ua_extract/regexes/upstream.backup/device/: consoles.yml  mobiles.yml
ua_extract/regexes/upstream/client/: browsers.yml  libraries.yml  mobile_apps.yml
ua_extract/regexes/upstream/device/: mobiles.yml  televisions.yml
ua_extract/tests/: base.py
ua_extract/tests/fixtures/upstream.backup/: bots.yml  phablet.yml  smartphone-11.yml  smartphone-16.yml  smartphone-17.yml  smartphone-18.yml  smartphone-22.yml  smartphone-23.yml  smartphone-26.yml  smartphone-27.yml  smartphone-28.yml  smartphone-29.yml  smartphone-30.yml  smartphone-31.yml  smartphone-32.yml  smartphone-33.yml  smartphone-34.yml  smartphone-35.yml  smartphone-36.yml  smartphone-37.yml  smartphone-38.yml  smartphone-39.yml  smartphone-40.yml  tablet-1.yml  (+8 more)
ua_extract/tests/parser/: test_clients.py
(+4 files in other folders)
