[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ua_extract"
version = "1.0.0"
description = "Python3 port of matomo's Device Detector"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Pranav Agrawal", email = "pranavagrawal321@gmail.com" }
]
dependencies = [
  "pyyaml",
  "regex"
]
requires-python = ">=3.8"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython"
]

[project.scripts]
ua_extract = "ua_extract.__main__:main"
